# sgNet

./: CMakeLists.txt  README.md  debuggingNotes.txt  gitNotes.txt  main.cpp  todo.txt
include/: testlib.h
include/neural/layer/: affine.h  affine1d.h  affine_t.h  convolution2d.h  flatten.h  leakyRelu.h  relu.h  sigmoid.h  softmax.h  tanh.h
include/neural/loss/: categoricalCrossEntropy.h
include/tensor/: tensor.h  tensor2d.h  tensor3d.h  tensorNd.h  vector.h
include/utils/: fileReading.h  frisbee.h  timer.h
src/: testlib.cpp
src/neural/layer/: affine.cpp  affine1d.cpp  affine_t.cpp  convolution2d.cpp  flatten.cpp  leakyRelu.cpp  relu.cpp  sigmoid.cpp  softmax.cpp  tanh.cpp
src/neural/loss/: categoricalCrossEntropy.cpp
src/tensor/: tensor.cpp  tensor2d.cpp  vector.cpp
src/utils/: fileReading.cpp  frisbee.cpp  timer.cpp
